# CPPMT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  output.txt  simulation.json
.devcontainer/: .clangd  .cmake-format.json  Dockerfile  apt-packages.in  devcontainer.json
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt  CMakePresets.json
homework_05/src/: telemetry.cpp
homework_06/: CMakeLists.txt  CMakePresets.json  output.txt
homework_06/data/: sample_vog17.txt  unknown_ammo.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: CMakeLists.txt  ballistics_tests.cpp
homework_07/: CMakeLists.txt  CMakePresets.json
homework_07/data/: ammo.json  ballistic_table.txt  config.json  targets.json
homework_07/include/: MissionProcessor.h
homework_07/include/config/: ComponentFactory.h  JsonConfigLoader.h
homework_07/include/dto/: AmmoParams.h  Coords.h  DronePhase.h  MissionConfig.h  MissionContext.h  Point.h  SimStep.h  SourceType.h  Target.h
homework_07/include/interfaces/: IBallisticSolver.h  IConfigLoader.h  IDroneState.h  IMission.h  ITargetProvider.h
homework_07/include/providers/: JsonTargetProvider.h
homework_07/include/solvers/: AnalyticalSolver.h
homework_07/include/state/: StateAccelerating.h  StateDecelerating.h  StateMoving.h  StateStopped.h  StateTurning.h
homework_07/src/: AnalyticalSolver.cpp  ConfigLoaderFactory.cpp  ConfigLoaderFactory.h  JsonConfigLoader.cpp  JsonConfigLoader.h  JsonTargetProvider.cpp  Mission.cpp  MissionBuilder.cpp  MissionProcessor.cpp  Utility.cpp  Utility.h  config.hpp.in  main.cpp
homework_07/src/config/: ComponentFactory.cpp  JsonConfigLoader.cpp
homework_07/src/providers/: JsonTargetProvider.cpp
homework_07/src/solvers/: AnalyticalSolver.cpp
homework_07/src/state/: StateAccelerating.cpp  StateDecelerating.cpp  StateMoving.cpp  StateStopped.cpp  StateTurning.cpp
preps/: README.md
